# xylo

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  example.xylo  test.xylo
.github/: FUNDING.yml
.github/workflows/: release.yml  rust.yml
examples/: generate.rs
src/: cache.rs  colors.rs  compiler.rs  error.rs  format.rs  functions.rs  interpreter.rs  lib.rs  main.rs  minify.rs  out.rs  parser.rs  renderer.rs  shape.rs
src/functions/: character.rs  color.rs  compare.rs  func.rs  image.rs  list.rs  math.rs  mod.rs  path.rs  rand.rs  shape.rs  system.rs  transform.rs
