[package]
name = "xylo-lang"
version = "0.1.0"
edition = "2021"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
strip = true

[dependencies]
anyhow = { version = "1.0", default-features = false }
base64 = { version = "0.22", default-features = false }
nom = { version = "8.0", default-features = false }
palette = { version = "0.7", default-features = false }
png = "0.17"
tiny-skia = { version = "0.11", default-features = false }
rand = { version = "0.9", default-features = false }
hashbrown = "0.15"
ahash = { version = "0.8", default-features = false }
rand_chacha = { version = "0.9", default-features = false }

[features]
default = ["std", "simd"]
std = [
	"anyhow/std",
	"ahash/std",
	"base64/std",
	"nom/std",
	"palette/std",
	"rand/std",
	"rand/thread_rng",
	"rand_chacha/std",
	"tiny-skia/std",
	"tiny-skia/png-format",
]
no-std = [
	"base64/alloc",
	"hashbrown/alloc",
	"nom/alloc",
	"palette/alloc",
	"palette/libm",
	"rand/alloc", 
	"tiny-skia/no-std-float"
]
simd = ["tiny-skia/simd"]
