[package]
name = "xylo-lang"
version = "0.1.1"
edition = "2021"
license = "MIT"
authors = ["giraffekey <giraffekey@tutanota.com>"]
description = "A functional programming language for generative art."
repository = "https://github.com/giraffekey/xylo"
readme = "README.md"
categories = [
	"command-line-utilities",
    "graphics",
    "no-std",
    "rendering",
    "visualization"
]
keywords = [
    "language",
    "procedural",
    "art"
]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
strip = true

[dependencies]
ahash = { version = "0.8", default-features = false }
base64 = { version = "0.22", default-features = false }
clap = { version = "4.5", features = ["derive"] }
factorial = "0.4"
hashbrown = "0.15"
itertools = { version = "0.14", default-features = false }
noise = "0.9"
nom = { version = "8.0", default-features = false }
num = "0.4"
palette = { version = "0.7", default-features = false }
png = "0.17"
rand = { version = "0.9", default-features = false }
rand_chacha = { version = "0.9", default-features = false }
sha2 = "0.10"
tiny-skia = { version = "0.11", default-features = false, optional = true }
voronoi = "0.1"

[features]
default = ["std", "simd"]
std = [
	"ahash/std",
	"base64/std",
	"itertools/use_std",
	"nom/std",
	"palette/std",
	"rand/std",
	"rand/thread_rng",
	"rand_chacha/std",
	"tiny-skia/std",
	"tiny-skia/png-format",
]
no-std = [
	"base64/alloc",
	"hashbrown/alloc",
	"itertools/use_alloc",
	"nom/alloc",
	"palette/alloc",
	"palette/libm",
	"rand/alloc", 
	"tiny-skia/no-std-float"
]
simd = ["tiny-skia/simd"]
