[package]
name = "xylo-lang"
version = "0.1.3"
edition = "2021"
license = "MIT"
authors = ["giraffekey <giraffekey@tutanota.com>"]
description = "A functional programming language for generative art."
repository = "https://github.com/giraffekey/xylo"
readme = "README.md"
categories = [
	"command-line-utilities",
    "graphics",
    "no-std",
    "rendering",
    "visualization"
]
keywords = [
    "language",
    "procedural",
    "art"
]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
strip = true

[dependencies]
ahash = { version = "0.8", default-features = false }
asdf-pixel-sort = { version = "0.2.1", git = "https://github.com/giraffekey/asdf-pixel-sort", optional = true }
base64 = { version = "0.22", default-features = false }
clap = { version = "4.5", features = ["derive"] }
factorial = "0.4"
fontdue = { version = "0.9", optional = true }
gif = { version = "0.14.1", optional = true }
hashbrown = "0.15"
image = { version = "0.25", optional = true }
imageproc = { version = "0.25", optional = true }
itertools = { version = "0.14", default-features = false }
noise = "0.9"
nom = { version = "8.0", default-features = false }
num = "0.4"
num-bigint = "0.4.6"
palette = { version = "0.7", default-features = false }
png = { version = "0.17", optional = true }
rand = { version = "0.9", default-features = false }
rand_chacha = { version = "0.9", default-features = false }
sha2 = "0.10"
tiny-skia = { version = "0.11", default-features = false, optional = true }
voronoi = "0.1"
wgpu = { version = "28.0.0", optional = true }

[features]
default = ["window-std", "image-std", "io"]
window-std = ["std", "wgpu"]
image-std = ["std", "png", "gif", "tiny-skia/std", "tiny-skia/png-format"]
image-alloc = ["alloc", "png", "gif", "tiny-skia/no-std-float"]
image-simd = ["tiny-skia/simd"]
std = [
	"ahash/std",
	"base64/std",
	"itertools/use_std",
	"nom/std",
	"palette/std",
	"rand/std",
	"rand/thread_rng",
	"rand_chacha/std",
]
alloc = [
	"base64/alloc",
	"hashbrown/alloc",
	"itertools/use_alloc",
	"nom/alloc",
	"palette/alloc",
	"palette/libm",
	"rand/alloc", 
]
io = [
	"asdf-pixel-sort",
	"fontdue",
	"image",
	"imageproc",
]
